--- a/sass/modules/_vars.scss
+++ b/sass/modules/_vars.scss
@@ -1,5 +1,3 @@
-//to be changed!
-$font-stock: 'Avenir', sans-serif;
-$headers: Times, sans-serif;
-$blue: blue;
-$grey: #efefef;
+$font-header: 'Montserrat', Helvetica, sans-serif; //Extra bold
+$font-body: 'Roboto', Helvetica, sans-serif;
+$font-color: #373535;
