--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -2,6 +2,13 @@
 //MOBILE
 
 @media (max-width: 479px) {
+    #contactRight {
+        margin-left: 3em;
+        }
+    
+    #contactRight form {
+        margin-left: 0em;
+    }
 }
 
 
@@ -9,6 +16,13 @@
 //TABLET
 
 @media (min-width: 480px) and (max-width: 768px) {
+    #contactRight {
+        margin-left: 4em;
+        }
+    
+    #contactRight form {
+        margin-left: 1em;
+    }
 }
 
 
@@ -16,4 +30,12 @@
 //DESKTOP
 
 @media (min-width: 769px) {
+    #contactRight {
+        margin-left: 4em; //might need to play more with for desktop
+        }
+    
+    #contactRight form {
+        margin-left: 3em; 
+    }
 }
+
