--- a/sass/modules/_vars.scss
+++ b/sass/modules/_vars.scss
@@ -1,3 +1,4 @@
 $font-header: 'Montserrat', Helvetica, sans-serif; //Extra bold
 $font-body: 'Roboto', Helvetica, sans-serif;
 $font-color: #373535;
+$blue: #4cb5c1;
