--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,9 @@
 #contactRight {
   float: left; }
 
+#contactRight h1 {
+  margin-top: 0px; }
+
 #contactRight form {
   align-content: center; }
 
@@ -58,7 +61,7 @@
   border-radius: 5px;
   height: 2.5em;
   margin-top: 2.5%;
-  margin-bottom: 5%;
+  margin-bottom: 3em;
   width: 18.3em;
   box-shadow: 1px 1px 5px #373535;
   font-family: "Roboto", Helvetica, sans-serif;
