--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -1,19 +1,9 @@
-#contactLeft {
-margin: 0px;
-}
-
-#contactLeft img {
-    float: left;
-    width: 50%;
-    margin: 0px;
-    }
-
 #contactRight {
     float: left;
     }
 
 #contactRight h1 {
-    margin-top: 0px;
+    margin-top: 15%;
     }
 
 #contactRight form {
@@ -25,33 +15,32 @@ margin: 0px;
     background-color: #f1f2f2;
     border-radius: 5px;
     height: 3em;
-    width: 25em;
+    width: 25.5em;
     padding-left: 5%;
     margin-top: 1%;
 }
 
 #contactRight form button {
     border: none;
-    background: #4cb5c1; /* Old browsers */
-    background: -moz-linear-gradient(-45deg, #4cb5c1 0%, #2e79bf 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, #4cb5c1 0%,#2e79bf 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, #4cb5c1 0%,#2e79bf 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     border-radius: 5px;
     height: 2.5em;
     margin-top: 2.5%;
     margin-bottom: 3em;
-    width: 18.3em;
+    width: 18.5em;
     box-shadow: 1px 1px 5px $font-color;
     font-family: $font-body;
     font-size: 1em;
     color: white;
+    background: #4cb5c1; /* Old browsers */
+    background: -moz-linear-gradient(-45deg, #4cb5c1 0%, #2e79bf 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #4cb5c1 0%,#2e79bf 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #4cb5c1 0%,#2e79bf 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
 #explore {
     clear: both;
     margin-top: 5%;
-    padding: 2%;
-    width: 100%;
+    width: 96%;
     background-color: $blue;
     color: white;
     
@@ -69,6 +58,5 @@ margin: 0px;
 #explore ul li {
     display: inline-block;
     text-align: center;
-    margin-left: 2.5%;
     margin-right: 2.5%;
 }
