--- a/css/main.css
+++ b/css/main.css
@@ -3,38 +3,113 @@
     margin-left: 3em; }
 
   #contactRight form {
-    margin-left: 0em; } }
+    margin-left: 0em; }
+
+  #mobileContact {
+    display: block; }
+
+  #desktopContact {
+    display: none; }
+
+  #contactLeft {
+    margin: 0px; }
+
+  #contactLeft img {
+    float: left;
+    width: 100%;
+    margin: 0px; }
+
+  #explore ul li {
+    margin-left: 0px; }
+
+  #explore {
+    padding-right: 4%;
+    padding-bottom: 5%;
+    padding-top: 5%;
+    margin-bottom: 0px; } }
 @media (min-width: 480px) and (max-width: 768px) {
   #contactRight {
-    margin-left: 4em; }
+    margin-left: 7.75em; }
 
   #contactRight form {
-    margin-left: 1em; } }
+    margin-left: 2.25em; }
+
+  #mobileContact {
+    display: block; }
+
+  #desktopContact {
+    display: none; }
+
+  #contactLeft {
+    margin: 0px; }
+
+  #contactLeft img {
+    float: left;
+    width: 100%;
+    margin: 0px; }
+
+  #explore ul li {
+    margin-left: 2.5%; }
+
+  #explore {
+    padding: 2%; } }
 @media (min-width: 769px) and (max-width: 1279px) {
   #contactRight {
     margin-left: 4em; }
 
   #contactRight form {
-    margin-left: 3em; } }
+    margin-left: 3em; }
+
+  #contactLeft {
+    margin: 0px; }
+
+  #contactLeft img {
+    float: left;
+    width: 50%;
+    margin: 0px; }
+
+  #mobileContact {
+    display: none; }
+
+  #desktopContact {
+    display: block; }
+
+  #explore ul li {
+    margin-left: 2.5%; }
+
+  #explore {
+    padding: 2% 2% 1% 2%; } }
 @media (min-width: 1279px) {
   #contactRight {
-    margin-left: 7em; }
+    margin-left: 7.75em; }
 
   #contactRight form {
-    margin-left: 3em; } }
-#contactLeft {
-  margin: 0px; }
+    margin-left: 2em; }
 
-#contactLeft img {
-  float: left;
-  width: 50%;
-  margin: 0px; }
+  #mobileContact {
+    display: none; }
 
+  #desktopContact {
+    display: block; }
+
+  #contactLeft {
+    margin: 0px; }
+
+  #contactLeft img {
+    float: left;
+    width: 50%;
+    margin: 0px; }
+
+  #explore ul li {
+    margin-left: 2.5%; }
+
+  #explore {
+    padding: 2% 2% 1% 2%; } }
 #contactRight {
   float: left; }
 
 #contactRight h1 {
-  margin-top: 0px; }
+  margin-top: 15%; }
 
 #contactRight form {
   align-content: center; }
@@ -44,12 +119,21 @@
   background-color: #f1f2f2;
   border-radius: 5px;
   height: 3em;
-  width: 25em;
+  width: 25.5em;
   padding-left: 5%;
   margin-top: 1%; }
 
 #contactRight form button {
   border: none;
+  border-radius: 5px;
+  height: 2.5em;
+  margin-top: 2.5%;
+  margin-bottom: 3em;
+  width: 18.5em;
+  box-shadow: 1px 1px 5px #373535;
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 1em;
+  color: white;
   background: #4cb5c1;
   /* Old browsers */
   background: -moz-linear-gradient(-45deg, #4cb5c1 0%, #2e79bf 100%);
@@ -57,22 +141,12 @@
   background: -webkit-linear-gradient(-45deg, #4cb5c1 0%, #2e79bf 100%);
   /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(135deg, #4cb5c1 0%, #2e79bf 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  border-radius: 5px;
-  height: 2.5em;
-  margin-top: 2.5%;
-  margin-bottom: 3em;
-  width: 18.3em;
-  box-shadow: 1px 1px 5px #373535;
-  font-family: "Roboto", Helvetica, sans-serif;
-  font-size: 1em;
-  color: white; }
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */ }
 
 #explore {
   clear: both;
   margin-top: 5%;
-  padding: 2%;
-  width: 100%;
+  width: 96%;
   background-color: #4cb5c1;
   color: white; }
 
@@ -86,7 +160,6 @@
 #explore ul li {
   display: inline-block;
   text-align: center;
-  margin-left: 2.5%;
   margin-right: 2.5%; }
 
 @-webkit-keyframes bounce {
