--- a/css/main.css
+++ b/css/main.css
@@ -2642,4 +2642,12 @@ body {
   -webkit-animation-delay: 2s;
   -moz-animation-delay: 2s; }
 
+.fade-enter-active, .fade-leave-active {
+  transition-duration: 0.5s;
+  transition-property: opacity;
+  transition-timing-function: ease; }
+
+.fade-enter, .fade-leave-active {
+  opacity: 0; }
+
 /*# sourceMappingURL=main.css.map */
