--- a/sass/main.scss
+++ b/sass/main.scss
@@ -88,3 +88,13 @@ body
     -webkit-animation-delay: 2s;
     -moz-animation-delay: 2s;
 }
+
+.fade-enter-active, .fade-leave-active {
+    transition-duration: 0.5s;
+    transition-property: opacity;
+    transition-timing-function: ease;
+}
+
+.fade-enter, .fade-leave-active {
+    opacity: 0;
+}
