--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -14,6 +14,10 @@
         display: block;
     }
 
+    img#desktopContact {
+        display: none;
+    }
+
     #desktopContact {
         display: none;
     }
