--- a/css/main.css
+++ b/css/main.css
@@ -33,34 +33,35 @@
     z-index: 1;
     transform-origin: 4px 0px;
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease; }
-    #menuToggle span #contactRight {
-      margin-left: 3em; }
-    #menuToggle span #contactRight form {
-      margin-left: 0em; }
-    #menuToggle span #mobileContact {
-      display: block; }
-    #menuToggle span img#desktopContact {
-      display: none; }
-    #menuToggle span #contactLeft #desktopContact {
-      display: none !important; }
-    #menuToggle span .goaway {
-      display: none;
-      visibility: hidden; }
-    #menuToggle span #contactLeft {
-      margin: 0px; }
-    #menuToggle span #contactLeft img {
-      float: left;
-      width: 100%;
-      margin: 0px; }
-    #menuToggle span #explore ul li {
-      margin-left: 0px; }
-    #menuToggle span #explore {
-      padding-right: 4%;
-      padding-bottom: 5%;
-      padding-top: 5%;
-      margin-bottom: 0px; }
-    #menuToggle span .goaway {
-      display: none !important; }
+
+  #contactRight {
+    margin-left: 3em; }
+
+  #contactRight form {
+    margin-left: 0em; }
+
+  #mobileContact {
+    display: block; }
+
+  #desktopContact {
+    display: none; }
+
+  #contactLeft {
+    margin: 0px; }
+
+  #contactLeft img {
+    float: left;
+    width: 100%;
+    margin: 0px; }
+
+  #explore ul li {
+    margin-left: 0px; }
+
+  #explore {
+    padding-right: 4%;
+    padding-bottom: 5%;
+    padding-top: 5%;
+    margin-bottom: 0px; }
 
   #menuToggle input:checked ~ span {
     opacity: 1;
@@ -171,7 +172,7 @@
     display: none; }
 
   #logo {
-    width: 10%;
+    width: 20%;
     margin-top: 2%;
     margin-left: 2%;
     float: left;
