--- a/css/main.css
+++ b/css/main.css
@@ -37,36 +37,45 @@
     transform-origin: 4px 0px;
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
   }
-  #menuToggle span #contactRight {
+
+  #contactRight {
     margin-left: 3em;
   }
-  #menuToggle span #contactRight form {
+
+  #contactRight form {
     margin-left: 0em;
   }
-  #menuToggle span #mobileContact {
+
+  #mobileContact {
     display: block;
   }
-  #menuToggle span img#desktopContact {
+
+  img#desktopContact {
     display: none !important;
   }
-  #menuToggle span #contactLeft {
+
+  #contactLeft {
     margin: 0px;
   }
-  #menuToggle span #contactLeft img {
+
+  #contactLeft img {
     float: left;
     width: 100%;
     margin: 0px;
   }
-  #menuToggle span #explore ul li {
+
+  #explore ul li {
     margin-left: 0px;
   }
-  #menuToggle span #explore {
+
+  #explore {
     padding-right: 4%;
     padding-bottom: 5%;
     padding-top: 5%;
     margin-bottom: 0px;
   }
-  #menuToggle span .goaway {
+
+  .goaway {
     display: none !important;
   }
 
@@ -122,8 +131,8 @@
   }
 
   #logo {
-    width: 10%;
-    margin-top: 2%;
+    width: 25%;
+    margin-top: 6%;
     margin-left: 2%;
     float: left;
     z-index: 1;
@@ -205,7 +214,7 @@
   }
 
   #logo {
-    width: 10%;
+    width: 20%;
     margin-top: 2%;
     margin-left: 2%;
     float: left;
