--- a/sass/modules/_vars.scss
+++ b/sass/modules/_vars.scss
@@ -2,3 +2,4 @@ $font-header: 'Montserrat', Helvetica, sans-serif; //Extra bold
 $font-body: 'Roboto', Helvetica, sans-serif;
 $font-color: #373535;
 $blue: #4cb5c1;
+$darkBlue: #2e79bf;
