logo spacing and sizing for responsive

--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -5,9 +5,10 @@
 
     #logo
     {
-        width: 15%;
+        width: 70%;
         margin-left: 3%;
-        margin-top: 3%;
+        margin-top: 4%;
+        margin-bottom: 4%;
     }
 
 
@@ -113,7 +114,8 @@
   position: fixed;
   margin: -100px 0 0 -180px;
   width: 200px;
-  padding-top: 100px;
+  padding-top: 75px;
+  padding-bottom: 25px;
   background: #46B5C2;
   list-style-type: none;
   //-webkit-font-smoothing: antialiased;
@@ -125,9 +127,10 @@
 
 #menu li
 {
-  padding: 15px;
-  font-weight: bold;
-  font-size: 1.3em;
+  padding: 15px 15px 10px 0px;
+  font-weight: normal;
+  text-transform: uppercase;
+  font-size: 1.2em;
   color: white;
 }
 
@@ -179,7 +182,7 @@
 
     #logo
     {
-        width: 10%;
+        width: 35%;
         margin-top: 2%;
         margin-left: 2%;
        // position: relative;
@@ -203,7 +206,7 @@
 
 #menu li
 {
-padding: 5px;
+padding: 5px 10px 0px 10px;
 display: block;
 color: black;
 font-weight: lighter;
@@ -214,6 +217,7 @@ font-size: 80%;
 //padding-top: 70px;
 font-weight: bold;
 font-size: 1em;
+border-bottom: 5px solid white;
 }
 
 
@@ -228,7 +232,7 @@ z-index: 1;
 text-align: center;
 float: right;
 padding-right: 8%;
-padding-top: 4%;
+padding-top: 2%;
 }
 
 #menu li:hover{
@@ -298,7 +302,8 @@ padding-top: 4%;
 #logo
 {
     width: 20%;
-    margin-top: 2%;
+    margin-top: 3%;
+    margin-bottom: 1%;
     margin-left: 2%;
    // position: relative;
     float: left;
@@ -321,14 +326,13 @@ display:none;
 
 #menu li
 {
-padding: 5px;
+padding: 5px 5px 0px 5px;
 display: block;
 color: black;
 text-align: center;
 float: left;
-//width: 18%;
-//padding-top: 70px;
 font-weight: bold;
+border-bottom: 5px solid white;
 }
 
 
@@ -342,9 +346,7 @@ z-index: 1;
 //width: 100%;
 text-align: center;
 float: right;
-padding-right: 8%;
-padding-top: 4%;
-}
+padding-right: 8%;}
 
 #menu li:hover{
 border-bottom: 5px solid #46B5C2;
@@ -365,6 +367,42 @@ border-bottom: 5px solid #46B5C2;
 
 }
 @media (min-width: 769px) and (max-width: 1279px) {
+    #checkbox
+{
+display:none;
+}
+
+#menu li
+{
+padding: 10px;
+display: block;
+color: black;
+text-align: center;
+float: left;
+font-weight: bold;
+font-size: 1.1em;
+margin-right: 1em;
+
+}
+
+
+#menu{
+list-style-type: none;
+z-index: 1;
+text-align: center;
+float: right;
+padding-right: 8%;
+padding-top: 3%;
+padding-bottom: 1%;
+}
+
+#menu li:hover{
+border-bottom: 5px solid #46B5C2;
+}
+
+    
+    
+    
     #contactRight {
         margin-left: 4em; //might need to play more with for desktop
         }
@@ -414,6 +452,37 @@ border-bottom: 5px solid #46B5C2;
 //DESKTOP x2
 
 @media (min-width: 1279px) {
+    #checkbox
+    {
+    display:none;
+    }
+    
+    #menu li
+    {
+    padding: 10px;
+    display: block;
+    color: black;
+    text-align: center;
+    float: left;
+    font-weight: bold;
+    font-size: 1.1em;
+    }
+    
+    
+    #menu{
+    list-style-type: none;
+    z-index: 1;
+    text-align: center;
+    float: right;
+    padding-right: 8%;
+    padding-top: 2%;
+    margin-bottom: 2%;
+    }
+    
+    #menu li:hover{
+    border-bottom: 5px solid #46B5C2;
+    }
+    
     #contactRight {
         margin-left: 7.75em; //might need to play more with for desktop
         }
