--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 @media (max-width: 479px) {
   #logo {
-    width: 15%;
+    width: 70%;
     margin-left: 3%;
-    margin-top: 3%; }
+    margin-top: 4%;
+    margin-bottom: 4%; }
 
   /* MENU TOGGLE*/
   #menuToggle {
@@ -78,7 +79,8 @@
     position: fixed;
     margin: -100px 0 0 -180px;
     width: 200px;
-    padding-top: 100px;
+    padding-top: 75px;
+    padding-bottom: 25px;
     background: #46B5C2;
     list-style-type: none;
     transform-origin: 0% 0%;
@@ -87,9 +89,10 @@
     text-decoration: none; }
 
   #menu li {
-    padding: 15px;
-    font-weight: bold;
-    font-size: 1.3em;
+    padding: 15px 15px 10px 0px;
+    font-weight: normal;
+    text-transform: uppercase;
+    font-size: 1.2em;
     color: white; }
 
   #menu a {
@@ -114,7 +117,7 @@
     display: none; }
 
   #logo {
-    width: 10%;
+    width: 35%;
     margin-top: 2%;
     margin-left: 2%;
     float: left;
@@ -129,7 +132,7 @@
     display: none; }
 
   #menu li {
-    padding: 5px;
+    padding: 5px 10px 0px 10px;
     display: block;
     color: black;
     font-weight: lighter;
@@ -137,7 +140,8 @@
     float: left;
     font-size: 80%;
     font-weight: bold;
-    font-size: 1em; }
+    font-size: 1em;
+    border-bottom: 5px solid white; }
 
   #menu {
     list-style-type: none;
@@ -145,7 +149,7 @@
     text-align: center;
     float: right;
     padding-right: 8%;
-    padding-top: 4%; }
+    padding-top: 2%; }
 
   #menu li:hover {
     border-bottom: 5px solid #46B5C2; }
@@ -191,7 +195,8 @@
 
   #logo {
     width: 20%;
-    margin-top: 2%;
+    margin-top: 3%;
+    margin-bottom: 1%;
     margin-left: 2%;
     float: left;
     z-index: 1; }
@@ -205,20 +210,20 @@
     display: none; }
 
   #menu li {
-    padding: 5px;
+    padding: 5px 5px 0px 5px;
     display: block;
     color: black;
     text-align: center;
     float: left;
-    font-weight: bold; }
+    font-weight: bold;
+    border-bottom: 5px solid white; }
 
   #menu {
     list-style-type: none;
     z-index: 1;
     text-align: center;
     float: right;
-    padding-right: 8%;
-    padding-top: 4%; }
+    padding-right: 8%; }
 
   #menu li:hover {
     border-bottom: 5px solid #46B5C2; }
@@ -232,6 +237,31 @@
     margin-left: 3em;
     padding-top: 0.5em; } }
 @media (min-width: 769px) and (max-width: 1279px) {
+  #checkbox {
+    display: none; }
+
+  #menu li {
+    padding: 10px;
+    display: block;
+    color: black;
+    text-align: center;
+    float: left;
+    font-weight: bold;
+    font-size: 1.1em;
+    margin-right: 1em; }
+
+  #menu {
+    list-style-type: none;
+    z-index: 1;
+    text-align: center;
+    float: right;
+    padding-right: 8%;
+    padding-top: 3%;
+    padding-bottom: 1%; }
+
+  #menu li:hover {
+    border-bottom: 5px solid #46B5C2; }
+
   #contactRight {
     margin-left: 4em; }
 
@@ -266,6 +296,30 @@
     float: left;
     padding-top: 0.5em; } }
 @media (min-width: 1279px) {
+  #checkbox {
+    display: none; }
+
+  #menu li {
+    padding: 10px;
+    display: block;
+    color: black;
+    text-align: center;
+    float: left;
+    font-weight: bold;
+    font-size: 1.1em; }
+
+  #menu {
+    list-style-type: none;
+    z-index: 1;
+    text-align: center;
+    float: right;
+    padding-right: 8%;
+    padding-top: 2%;
+    margin-bottom: 2%; }
+
+  #menu li:hover {
+    border-bottom: 5px solid #46B5C2; }
+
   #contactRight {
     margin-left: 7.75em; }
 
