--- a/css/main.css
+++ b/css/main.css
@@ -37,30 +37,38 @@
     transform-origin: 4px 0px;
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
   }
-  #menuToggle span #contactRight {
+
+  #contactRight {
     margin-left: 3em;
   }
-  #menuToggle span #contactRight form {
+
+  #contactRight form {
     margin-left: 0em;
   }
-  #menuToggle span #mobileContact {
+
+  #mobileContact {
     display: block;
   }
-  #menuToggle span #desktopContact {
+
+  #desktopContact {
     display: none;
   }
-  #menuToggle span #contactLeft {
+
+  #contactLeft {
     margin: 0px;
   }
-  #menuToggle span #contactLeft img {
+
+  #contactLeft img {
     float: left;
     width: 100%;
     margin: 0px;
   }
-  #menuToggle span #explore ul li {
+
+  #explore ul li {
     margin-left: 0px;
   }
-  #menuToggle span #explore {
+
+  #explore {
     padding-right: 4%;
     padding-bottom: 5%;
     padding-top: 5%;
@@ -119,8 +127,8 @@
   }
 
   #logo {
-    width: 10%;
-    margin-top: 2%;
+    width: 25%;
+    margin-top: 6%;
     margin-left: 2%;
     float: left;
     z-index: 1;
@@ -173,8 +181,8 @@
     display: block;
   }
 
-  #desktopContact {
-    display: none;
+  img#desktopContact {
+    display: none !important;
   }
 
   #contactLeft {
@@ -202,7 +210,7 @@
   }
 
   #logo {
-    width: 10%;
+    width: 20%;
     margin-top: 2%;
     margin-left: 2%;
     float: left;
@@ -337,14 +345,7 @@
 }
 
 .destinations {
-  width: 19%;
-  padding: 0% !important;
-  margin: 0% !important;
-  border: none !important;
-}
-
-#destination img {
-  width: 19%;
+  width: 20%;
   padding: 0% !important;
   margin: 0% !important;
   border: none !important;
@@ -361,6 +362,49 @@
   position: relative;
   text-align: center;
   color: white;
+}
+
+#tagline {
+  color: white;
+  font-size: 3em;
+  text-shadow: 1px 1px 20px #373535;
+}
+
+.content h2 p {
+  padding-left: 30%;
+}
+
+#signButton {
+  border: none;
+  border-radius: 5px;
+  height: 2.5em;
+  margin-top: 2.5%;
+  margin-bottom: 3em;
+  width: 18.5em;
+  box-shadow: 1px 1px 5px #373535;
+  font-family: "Montserrat", Helvetica, sans-serif;
+  font-size: 1em;
+  color: black;
+  background: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#onTop {
+  position: absolute;
+  text-align: center;
+  top: 0;
+  left: 0;
+}
+
+#popUp {
+  position: absolute;
+  text-align: center;
+  top: 30%;
+  left: 0;
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
 #contactRight {
