--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -27,19 +27,12 @@
 
 .destinations
 {
-    width: 19%;
+    width: 20%;
     padding: 0% !important;
     margin: 0% !important;
     border: none !important;
 }
 
-#destination img
-{
-    width: 19%;
-    padding: 0% !important;
-    margin: 0% !important;
-    border: none !important;
-}
 
 .centered {
     position: absolute;
@@ -52,4 +45,52 @@
     position: relative;
     text-align: center;
     color: white;
+  }
+
+  #tagline
+  {
+      color: white;
+      font-size: 3em;
+      text-shadow: 1px 1px 20px $font-color;
+  }
+
+  .content h2 p
+  {
+    padding-left: 30%;
+  }
+
+  #signButton
+  {
+    border: none;
+    border-radius: 5px;
+    height: 2.5em;
+    margin-top: 2.5%;
+    margin-bottom: 3em;
+    width: 18.5em;
+    box-shadow: 1px 1px 5px $font-color;
+    font-family: $font-header;
+    font-size: 1em;
+    color: black;
+    background: white;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  #onTop
+  {
+      position: absolute;
+      text-align: center;
+      top: 0;
+      left: 0;
+  }
+
+  #popUp
+  {
+    position: absolute;
+    text-align: center;
+    top: 30%;
+    left: 0;
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
   }
