--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -269,7 +269,7 @@ padding-top: 2%;
         padding: 2%;
     }
 
-    socialMed {
+    #socialMed {
         margin-right: 3em;
         float: right;
         list-style: none;
@@ -432,11 +432,11 @@ border-bottom: 5px solid #46B5C2;
     }
 
     #explore ul li {
-        margin-left: 2.5%;
+        margin-left: 2%;
     }
 
     #explore {
-        padding: 2% 2% 1% 2%;
+        padding: 1% 2% 1% 2%;
 
     }
     #socialMed {
@@ -524,7 +524,7 @@ border-bottom: 5px solid #46B5C2;
         padding: 2% 2% 1% 2%;   
     }
 
-    socialMed {
+    #socialMed {
         margin-right: 3em;
         float: right;
         list-style: none;
