--- a/css/main.css
+++ b/css/main.css
@@ -287,10 +287,12 @@
     display: block; }
 
   #explore ul li {
-    margin-left: 2%; }
+    margin-left: 2.5%; }
 
   #explore {
-    padding: 1% 2% 1% 2%; }
+    padding: 2% 2% 1% 2%;
+    margin-left: 0em;
+    margin-right: 1em; }
 
   #socialMed {
     margin-right: 3em;
@@ -352,7 +354,9 @@
     margin-left: 2.5%; }
 
   #explore {
-    padding: 2% 2% 1% 2%; }
+    padding: 2% 2% 1% 2%;
+    margin-left: 0em;
+    margin-right: 1em; }
 
   #socialMed {
     margin-right: 3em;
