--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -77,16 +77,16 @@
             margin: 0px;
         }
     
-    #explore ul li {
-        margin-left: 0px;
-    }
-
-    #explore {
-        padding-right: 4%;
-        padding-bottom: 5%;
-        padding-top: 5%;
-        margin-bottom: 0px;
-    }
+        #explore ul li {
+            margin-left: 0px;
+        }
+    
+        #explore {
+            padding-right: 4%;
+            padding-bottom: 5%;
+            padding-top: 5%;
+            margin-bottom: 0px;
+        }
 
 
 #menuToggle input:checked ~ span
@@ -261,13 +261,13 @@ padding-top: 2%;
             margin: 0px;
         }
     
-    #explore ul li {
-        margin-left: 2.5%;
-    }
-
-    #explore {
-        padding: 2%;
-    }
+        #explore ul li {
+            margin-left: 2.5%;
+        }
+    
+        #explore {
+            padding: 2%;
+        }
 
     #socialMed {
         margin-right: 3em;
@@ -432,13 +432,15 @@ border-bottom: 5px solid #46B5C2;
     }
 
     #explore ul li {
-        margin-left: 2%;
+        margin-left: 2.5%;
     }
 
     #explore {
-        padding: 1% 2% 1% 2%;
-
+        padding: 2% 2% 1% 2%;
+        margin-left: 0em; 
+        margin-right: 1em;   
     }
+    
     #socialMed {
         margin-right: 3em;
         float: right;
@@ -516,13 +518,15 @@ border-bottom: 5px solid #46B5C2;
             margin: 0px;
         }
 
-    #explore ul li {
-        margin-left: 2.5%;
-    }
-
-    #explore {
-        padding: 2% 2% 1% 2%;   
-    }
+        #explore ul li {
+            margin-left: 2.5%;
+        }
+    
+        #explore {
+            padding: 2% 2% 1% 2%;
+            margin-left: 0em; 
+            margin-right: 1em;   
+        }
 
     #socialMed {
         margin-right: 3em;
