--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,8 @@
     width: 70%;
     margin-left: 3%;
     margin-top: 4%;
-    margin-bottom: 4%; }
+    margin-bottom: 4%;
+  }
 
   /* MENU TOGGLE*/
   #menuToggle {
@@ -108,7 +109,8 @@
     font-weight: normal;
     text-transform: uppercase;
     font-size: 1.2em;
-    color: white; }
+    color: white;
+  }
 
   #menu a {
     text-decoration: none;
@@ -119,17 +121,20 @@
   }
 
   #menuToggle input:checked ~ ul {
-    transform: none; }
+    transform: none;
+  }
 
   #socialMed {
     text-align: center;
     float: none;
     margin-right: 2em;
-    margin-top: 2.5em; }
+    margin-top: 2.5em;
+  }
 
   #copyText {
-    text-align: center; } }
-
+    text-align: center;
+  }
+}
 @media (min-width: 480px) and (max-width: 768px) {
   #menutoggle {
     display: none;
@@ -163,7 +168,8 @@
     font-size: 80%;
     font-weight: bold;
     font-size: 1em;
-    border-bottom: 5px solid white; }
+    border-bottom: 5px solid white;
+  }
 
   #menu {
     list-style-type: none;
@@ -171,7 +177,8 @@
     text-align: center;
     float: right;
     padding-right: 8%;
-    padding-top: 2%; }
+    padding-top: 2%;
+  }
 
   #menu li:hover {
     border-bottom: 5px solid #46B5C2;
@@ -208,17 +215,20 @@
   }
 
   #explore {
-    padding: 2%; }
+    padding: 2%;
+  }
 
   #socialMed {
     margin-right: 3em;
-    float: right; }
+    float: right;
+  }
 
   #copyText {
     float: left;
     margin-left: 3em;
-    padding-top: 0.5em; } }
-
+    padding-top: 0.5em;
+  }
+}
 @media (min-width: 769px) {
   /*NAVIGATION*/
   #menutoggle {
@@ -251,30 +261,36 @@
     text-align: center;
     float: left;
     font-weight: bold;
-    border-bottom: 5px solid white; }
+    border-bottom: 5px solid white;
+  }
 
   #menu {
     list-style-type: none;
     z-index: 1;
     text-align: center;
     float: right;
-    padding-right: 8%; }
+    padding-right: 8%;
+  }
 
   #menu li:hover {
-    border-bottom: 5px solid #46B5C2; }
+    border-bottom: 5px solid #46B5C2;
+  }
 
   #socialMed {
     margin-right: 3em;
-    float: right; }
+    float: right;
+  }
 
   #copyText {
     float: left;
     margin-left: 3em;
-    padding-top: 0.5em; } }
-
+    padding-top: 0.5em;
+  }
+}
 @media (min-width: 769px) and (max-width: 1279px) {
   #checkbox {
-    display: none; }
+    display: none;
+  }
 
   #menu li {
     padding: 10px;
@@ -284,7 +300,8 @@
     float: left;
     font-weight: bold;
     font-size: 1.1em;
-    margin-right: 1em; }
+    margin-right: 1em;
+  }
 
   #menu {
     list-style-type: none;
@@ -293,10 +310,12 @@
     float: right;
     padding-right: 4%;
     padding-top: 3%;
-    padding-bottom: 1%; }
+    padding-bottom: 1%;
+  }
 
   #menu li:hover {
-    border-bottom: 5px solid #46B5C2; }
+    border-bottom: 5px solid #46B5C2;
+  }
 
   #contactRight {
     margin-left: 4em;
@@ -329,19 +348,23 @@
   }
 
   #explore {
-    padding: 2% 2% 1% 2%; }
+    padding: 2% 2% 1% 2%;
+  }
 
   #socialMed {
     margin-right: 3em;
-    float: right; }
+    float: right;
+  }
 
   #copyText {
     float: left;
-    padding-top: 0.5em; } }
-
+    padding-top: 0.5em;
+  }
+}
 @media (min-width: 1279px) {
   #checkbox {
-    display: none; }
+    display: none;
+  }
 
   #menu li {
     padding: 10px;
@@ -350,7 +373,8 @@
     text-align: center;
     float: left;
     font-weight: bold;
-    font-size: 1.1em; }
+    font-size: 1.1em;
+  }
 
   #menu {
     list-style-type: none;
@@ -359,10 +383,12 @@
     float: right;
     padding-right: 8%;
     padding-top: 2%;
-    margin-bottom: 2%; }
+    margin-bottom: 2%;
+  }
 
   #menu li:hover {
-    border-bottom: 5px solid #46B5C2; }
+    border-bottom: 5px solid #46B5C2;
+  }
 
   #contactRight {
     margin-left: 7.75em;
@@ -396,6 +422,17 @@
 
   #explore {
     padding: 2% 2% 1% 2%;
+  }
+
+  #socialMed {
+    margin-right: 3em;
+    float: right;
+  }
+
+  #copyText {
+    float: left;
+    margin-left: 5em;
+    padding-top: 0.5em;
   }
 }
 #graphicDesignText {
@@ -485,24 +522,45 @@
   margin-left: 30%;
   margin-right: 30%;
 }
-    padding: 2% 2% 1% 2%; }
 
-  #socialMed {
-    margin-right: 3em;
-    float: right; }
+.newsletter {
+  background: #2e79bf;
+  padding: 1%;
+}
 
-  #copyText {
-    float: left;
-    margin-left: 5em;
-    padding-top: 0.5em; } }
-/* LOGO */
+#daNews {
+  color: white;
+  float: left;
+  width: 50%;
+  text-align: center;
+}
+
+#daNewsButton {
+  border: none;
+  border-radius: 5px;
+  height: 2.5em;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
+  box-shadow: 1px 1px 5px #373535;
+  font-family: "Montserrat", Helvetica, sans-serif;
+  font-size: 1em;
+  color: black;
+  background: white;
+  font-weight: bold;
+  cursor: pointer;
+  width: 45%;
+  padding-right: 5%;
+}
+
 #socialMed li {
   list-style: none;
   display: inline;
-  margin-right: 0.75em; }
+  margin-right: 0.75em;
+}
 
 #socialMed li a img {
-  width: 2em; }
+  width: 2em;
+}
 
 #contactRight {
   float: left;
