--- a/css/main.css
+++ b/css/main.css
@@ -140,8 +140,7 @@
     float: left;
     font-size: 80%;
     font-weight: bold;
-    font-size: 1em;
-    border-bottom: 5px solid white; }
+    font-size: 1em; }
 
   #menu {
     list-style-type: none;
@@ -219,8 +218,7 @@
     color: black;
     text-align: center;
     float: left;
-    font-weight: bold;
-    border-bottom: 5px solid white; }
+    font-weight: bold; }
 
   #menu {
     list-style-type: none;
