--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -39,7 +39,7 @@
 
 #explore {
     clear: both;
-    margin-top: 5%;
+    //margin-top: 5%;
     width: 96%;
     background-color: $blue;
     color: white;
