--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -6,8 +6,8 @@
 .square {
     float:left;
     position: relative;
-    width: 50%;
-    padding-bottom : 50%; 
+    // width: 50%;
+    // padding-bottom : 50%; 
 	overflow:hidden;
 }
 
@@ -50,7 +50,6 @@
   #tagline
   {
       color: white;
-      font-size: 3em;
       text-shadow: 1px 1px 20px $font-color;
   }
 
@@ -63,13 +62,13 @@
   {
     border: none;
     border-radius: 5px;
-    height: 2.5em;
-    margin-top: 2.5%;
-    margin-bottom: 3em;
-    width: 18.5em;
+    //height: 2.5em;
+    //margin-top: 2.5%;
+    //margin-bottom: 3em;
+    //width: 18.5em;
     box-shadow: 1px 1px 5px $font-color;
     font-family: $font-header;
-    font-size: 1em;
+    //font-size: 1em;
     color: black;
     background: white;
     font-weight: bold;
@@ -88,11 +87,7 @@
   {
     position: absolute;
     text-align: center;
-    top: 30%;
     left: 0;
-    width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
   }
 
 .newsletter
@@ -125,4 +120,14 @@
     cursor: pointer;
     width: 45%;
     padding-right: 5%;
+}
+
+#logotext1
+{
+    text-align: center;
+}
+
+#logotext2
+{
+    text-align: center;
 }
