--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,8 @@
     width: 70%;
     margin-left: 3%;
     margin-top: 4%;
-    margin-bottom: 4%; }
+    margin-bottom: 4%;
+  }
 
   #signButton {
     height: 3em;
@@ -99,11 +100,7 @@
     padding-bottom: 5%;
     padding-top: 5%;
     margin-bottom: 0px;
-<<<<<<< HEAD
-    margin-top: 0%; }
-=======
   }
->>>>>>> caf058e5128d355a15d361e25c0572efae75bb2f
 
   #menuToggle input:checked ~ span {
     opacity: 1;
@@ -138,7 +135,8 @@
     font-weight: normal;
     text-transform: uppercase;
     font-size: 1.2em;
-    color: white; }
+    color: white;
+  }
 
   #menu a {
     text-decoration: none;
@@ -149,22 +147,20 @@
   }
 
   #menuToggle input:checked ~ ul {
-    transform: none; }
+    transform: none;
+  }
 
   #socialMed {
     text-align: center;
     float: none;
     margin-right: 2em;
-    margin-top: 2.5em; }
+    margin-top: 2.5em;
+  }
 
   #copyText {
-<<<<<<< HEAD
-    text-align: center; } }
-=======
     text-align: center;
   }
 }
->>>>>>> caf058e5128d355a15d361e25c0572efae75bb2f
 @media (min-width: 480px) and (max-width: 768px) {
   #popUp {
     top: 10%;
@@ -217,7 +213,9 @@
     float: left;
     font-size: 80%;
     font-weight: bold;
-    font-size: 1em; }
+    font-size: 1em;
+    border-bottom: 5px solid white;
+  }
 
   #menu {
     list-style-type: none;
@@ -225,7 +223,8 @@
     text-align: center;
     float: right;
     padding-right: 8%;
-    padding-top: 2%; }
+    padding-top: 2%;
+  }
 
   #menu li:hover {
     border-bottom: 5px solid #46B5C2;
@@ -263,7 +262,7 @@
 
   #explore {
     padding: 2%;
-    margin-top: 0%; }
+  }
 
   #socialMed {
     margin-right: 3em;
@@ -278,9 +277,6 @@
   #copyText {
     float: left;
     margin-left: 3em;
-<<<<<<< HEAD
-    padding-top: 0.5em; } }
-=======
     padding-top: 0.5em;
   }
 
@@ -309,7 +305,6 @@
     padding: 5%;
   }
 }
->>>>>>> caf058e5128d355a15d361e25c0572efae75bb2f
 @media (min-width: 769px) {
   #logotext1 h2 {
     font-size: 2em;
@@ -382,21 +377,26 @@
     color: black;
     text-align: center;
     float: left;
-    font-weight: bold; }
+    font-weight: bold;
+    border-bottom: 5px solid white;
+  }
 
   #menu {
     list-style-type: none;
     z-index: 1;
     text-align: center;
     float: right;
-    padding-right: 8%; }
+    padding-right: 8%;
+  }
 
   #menu li:hover {
-    border-bottom: 5px solid #46B5C2; }
+    border-bottom: 5px solid #46B5C2;
+  }
 
   #socialMed {
     margin-right: 3em;
-    float: right; }
+    float: right;
+  }
 
   #copyText {
     float: left;
@@ -406,7 +406,8 @@
 }
 @media (min-width: 769px) and (max-width: 1279px) {
   #checkbox {
-    display: none; }
+    display: none;
+  }
 
   #menu li {
     padding: 10px;
@@ -416,7 +417,8 @@
     float: left;
     font-weight: bold;
     font-size: 1.1em;
-    margin-right: 1em; }
+    margin-right: 1em;
+  }
 
   #menu {
     list-style-type: none;
@@ -425,10 +427,12 @@
     float: right;
     padding-right: 4%;
     padding-top: 3%;
-    padding-bottom: 1%; }
+    padding-bottom: 1%;
+  }
 
   #menu li:hover {
-    border-bottom: 5px solid #46B5C2; }
+    border-bottom: 5px solid #46B5C2;
+  }
 
   #contactRight {
     margin-left: 4em;
@@ -464,11 +468,7 @@
     padding: 2% 2% 1% 2%;
     margin-left: 0em;
     margin-right: 1em;
-<<<<<<< HEAD
-    margin-top: 0%; }
-=======
   }
->>>>>>> caf058e5128d355a15d361e25c0572efae75bb2f
 
   #socialMed {
     margin-right: 3em;
@@ -507,7 +507,8 @@
 }
 @media (min-width: 1279px) {
   #checkbox {
-    display: none; }
+    display: none;
+  }
 
   #menu li {
     padding: 10px;
@@ -516,7 +517,8 @@
     text-align: center;
     float: left;
     font-weight: bold;
-    font-size: 1.1em; }
+    font-size: 1.1em;
+  }
 
   #menu {
     list-style-type: none;
@@ -525,10 +527,12 @@
     float: right;
     padding-right: 8%;
     padding-top: 2%;
-    margin-bottom: 2%; }
+    margin-bottom: 2%;
+  }
 
   #menu li:hover {
-    border-bottom: 5px solid #46B5C2; }
+    border-bottom: 5px solid #46B5C2;
+  }
 
   #contactRight {
     margin-left: 7.75em;
@@ -564,11 +568,7 @@
     padding: 2% 2% 1% 2%;
     margin-left: 0em;
     margin-right: 1em;
-<<<<<<< HEAD
-    margin-top: 0%; }
-=======
   }
->>>>>>> caf058e5128d355a15d361e25c0572efae75bb2f
 
   #socialMed {
     margin-right: 3em;
@@ -577,19 +577,12 @@
   }
 
   #socialMed li {
-<<<<<<< HEAD
-    display: inline; }
-=======
     display: inline;
   }
->>>>>>> caf058e5128d355a15d361e25c0572efae75bb2f
 
   #copyText {
     float: left;
     margin-left: 5em;
-<<<<<<< HEAD
-    padding-top: 0.5em; } }
-=======
     padding-top: 0.5em;
   }
 
@@ -638,7 +631,6 @@
     padding: 5%;
   }
 }
->>>>>>> caf058e5128d355a15d361e25c0572efae75bb2f
 #graphicDesignText {
   width: 100%;
 }
@@ -713,23 +705,19 @@
   position: absolute;
   text-align: center;
   left: 0;
-<<<<<<< HEAD
-  width: 40%;
-  margin-left: 30%;
-  margin-right: 30%; }
-=======
 }
->>>>>>> caf058e5128d355a15d361e25c0572efae75bb2f
 
 .newsletter {
   background: #2e79bf;
-  padding: 1%; }
+  padding: 1%;
+}
 
 #daNews {
   color: white;
   float: left;
   width: 50%;
-  text-align: center; }
+  text-align: center;
+}
 
 #daNewsButton {
   border: none;
@@ -745,9 +733,6 @@
   font-weight: bold;
   cursor: pointer;
   width: 45%;
-<<<<<<< HEAD
-  padding-right: 5%; }
-=======
   padding-right: 5%;
 }
 
@@ -758,15 +743,16 @@
 #logotext2 {
   text-align: center;
 }
->>>>>>> caf058e5128d355a15d361e25c0572efae75bb2f
 
 #socialMed li {
   list-style: none;
   display: inline;
-  margin-right: 0.75em; }
+  margin-right: 0.75em;
+}
 
 #socialMed li a img {
-  width: 2em; }
+  width: 2em;
+}
 
 #contactRight {
   float: left;
