--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -125,7 +125,6 @@
             padding-bottom: 5%;
             padding-top: 5%;
             margin-bottom: 0px;
-            margin-top: 0%;  
         }
 
 
@@ -277,6 +276,7 @@ font-size: 80%;
 //padding-top: 70px;
 font-weight: bold;
 font-size: 1em;
+border-bottom: 5px solid white;
 }
 
 
@@ -329,7 +329,6 @@ padding-top: 2%;
     
         #explore {
             padding: 2%;
-            margin-top: 0%;  
         }
 
     #socialMed {
@@ -473,6 +472,7 @@ color: black;
 text-align: center;
 float: left;
 font-weight: bold;
+border-bottom: 5px solid white;
 }
 
 
@@ -576,10 +576,9 @@ border-bottom: 5px solid #46B5C2;
     #explore {
         padding: 2% 2% 1% 2%;
         margin-left: 0em; 
-        margin-right: 1em; 
-        margin-top: 0%;  
+        margin-right: 1em;   
     }
-
+    
     #socialMed {
         margin-right: 3em;
         float: right;
@@ -688,8 +687,7 @@ border-bottom: 5px solid #46B5C2;
         #explore {
             padding: 2% 2% 1% 2%;
             margin-left: 0em; 
-            margin-right: 1em;
-            margin-top: 0%;     
+            margin-right: 1em;   
         }
 
     #socialMed {
